--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -10,13 +10,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 30px;
+    padding: 0 40px;
 }
 
 .nav {
     display: flex;
     align-items: center;
-    column-gap: 20px;
+    column-gap: 25px;
 }
 
 .button {
@@ -24,25 +24,38 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: #fff;
+    color: #2d4155;
     font-size: 13px;
     font-weight: 700;
-    width: 100px;
+    padding: 5px 10px;
+    min-width: 110px;
     height: 30px;
     flex-shrink: 0;
-    border-radius: 10px;
-    background: #d61738;
+    border-radius: 4px;
+    background: #ffffff;
     cursor: pointer;
     border: none;
+    column-gap: 5px;
 }
 
 .link {
     color: white;
+    height: 35px;
 }
 
 .menuButton {
     background-color: transparent;
     color: #fff;
     border: none;
+    cursor: pointer;
+}
+
+.user {
+    display: flex;
+    column-gap: 5px;
+    flex-wrap: nowrap;
+    color: #fff;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
 }
